--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,3 +15,7 @@
 .btn-action-form {
     @apply px-3 h-8 text-xs text-white rounded-lg cursor-pointer;
 }
+
+.title-error {
+    @apply text-red-500 text-[10px];
+}
